# starware

./: BMgui.h  BMspec.h  CMakeLists.txt  README.md  eff_data_add.root  eff_data_gc.root  installation.sh  libStarwareClssLinkDef.h  rootlogoff.C  rootlogon.C  starware.cpp  starware_gui.C  uninstallation.sh
cmake/: CMakeCache.txt  CMakeLists.txt  G__STARWAREDict.cxx  Makefile  cmake_install.cmake  libSTARWARE.dylib  libSTARWAREDict.rootmap  libSTARWAREDict_rdict.pcm  rootlogon.C  starware.cpp
cmake/source/: BMgui.cc  BMgui.h  BMspec.cc  BMspec.h  STARWARELinkDef.hh  starware.cpp
exe/: CMakeLists.txt  starware.cpp
include/: BMgui.h  BMspec.h  STAR.h  STARAnaDC.h  STARAnaDis.h  STARAnaGG.h  STARAnaTG.h  STARCal.h  STARGui.h
src/: BMgui.cc  BMspec.cc  CMakeLists.txt  STAR.cc  STARAnaDC.cc  STARAnaDis.cc  STARAnaGG.cc  STARAnaTG.cc  STARCal.cc  STARGui.cc
